--- a/css/main/style.css
+++ b/css/main/style.css
@@ -93,6 +93,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 
 .search-form {
     z-index: 50;
+    width: 324px;
 }
 
 .search-form form {
@@ -109,7 +110,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
 }
 
 .search-btn {
-    background: url('../img/search-btn.png') no-repeat;
+    background: url('../../img/search-btn.png') no-repeat;
     max-width: 20px;
     margin: 0 0 0 -40px;
     left: 0;
@@ -268,7 +269,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
 }
 
-.clinic-service-text {
+.review-clinic-text {
     font-style: normal;
     font-weight: 500;
     font-size: 30px;
@@ -312,13 +313,60 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: rgba(0, 0, 0, 0.3);
 }
 
+.popular-doctor-img {
+    margin-bottom: 30px;
+}
+
 .popular-doctor-img img {
-    max-width: 35%;
+    max-width: 55%;
+}
+
+.swiper-main__slide {
+    display: flex;
+}
+
+.doctor-name {
+    margin-bottom: 10px;
+}
+
+.doctor-category {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    color: rgba(0, 0, 0, 0.3);
+    margin-bottom: 10px;
+}
+
+.doctor-spec {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 15px;
+    margin-bottom: 18px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+
+.doctor-address {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 13px;
+}
+
+.doctor-phone {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 0.7);
+    margin-bottom: 20px;
 }
 
 .doctor-card {
-    width: 334px;
-    height: 442px;
 }
 
 .rating-body {
@@ -348,11 +396,41 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: flex;
 }
 
+.popular-doctor {
+    padding: 17px 30px;
+    width: 100%;
+}
+
 .reviews-count {
     font-size: 12px;
     line-height: 15px;
     color: rgba(0, 0, 0, 0.5);
 }
+
+.info-docspec {
+    text-align: center;
+    margin: 40px;
+}
+
+.popup-questions {
+    text-align: center;
+    margin: 40px;
+}
+
+.breadcrumbs-item {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    text-decoration-line: underline;
+
+    color: rgba(0, 0, 0, 0.8);
+}
+
+
+
+
+
 
 
 .scrollup {
@@ -365,7 +443,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     display: none;
     text-indent: -9999px;
     z-index: 30;
-    background: url("../img/scroll.png") no-repeat;
+    background: url("../../img/scroll.png") no-repeat;
 }
 
 
@@ -388,7 +466,7 @@ html, body, dl, dt, dd, ol, ul, li, h1, h2, h3, h4, h5, h6, p, hr, img, a, em, s
     color: #000000;
 }
 
-.clinic-service-text {
+.review-clinic-text {
     margin: 60px;
 }
 
